--- a/app/src/main/res/layout/activity_d_o_b.xml
+++ b/app/src/main/res/layout/activity_d_o_b.xml
@@ -5,24 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DOB">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/dot_bg"
-        android:layout_marginTop="90dp"
-        android:layout_marginStart="10dp"/>
+        android:layout_alignTop="@+id/ivCircle"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/dot_bg" />
     <ImageView
+        android:id="@+id/ivCircle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/circle1_bg"
-        android:layout_marginTop="65dp"
-        android:layout_marginStart="30dp"/>
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="55dp" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/ivCircle"
+        android:layout_alignTop="@+id/ivCircle"
+        android:layout_alignEnd="@+id/ivCircle"
+        android:layout_alignBottom="@+id/ivCircle"
+        android:padding="10dp"
         android:src="@drawable/ic_birthday_cake"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="80dp"/>
+        />
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -35,6 +43,7 @@
         android:layout_marginTop="150dp"
         android:layout_marginStart="30dp"/>
     <TextView
+        android:id="@+id/birth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="of birth?"
@@ -43,19 +52,18 @@
         android:textColor="#000000"
         android:layout_below="@id/textView"
         android:layout_marginStart="30dp"/>
-    <View
-        android:layout_width="350dp"
-        android:layout_height="3dp"
-        android:background="#000000"
-        android:layout_marginTop="350dp"
-        android:layout_marginStart="30dp"/>
-    <View
-        android:layout_width="350dp"
-        android:layout_height="3dp"
-        android:id="@+id/tvline"
-        android:background="#000000"
-        android:layout_marginTop="420dp"
-        android:layout_marginStart="30dp"/>
+
+    <DatePicker
+        android:id="@+id/datepicker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/birth"
+        android:layout_marginTop="10dp"
+        android:calendarViewShown="false"
+        android:backgroundTint="@color/black"
+
+        android:datePickerMode="spinner" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,7 +71,7 @@
         android:id="@+id/tvage"
         android:textSize="30dp"
         android:textStyle="bold"
-        android:layout_below="@id/tvline"
+        android:layout_below="@id/datepicker"
         android:layout_marginTop="60dp"
         android:textColor="#000000"
         android:gravity="center"/>
@@ -74,23 +82,15 @@
         android:textSize="20dp"
         android:gravity="center"
         android:layout_below="@id/tvage"/>
+
     <ImageView
-        android:layout_width="wrap_content"
-        android:id="@+id/tvcircle"
-        android:layout_marginTop="670dp"
-        android:layout_marginStart="350dp"
-        android:background="@drawable/circle"
-        android:layout_height="wrap_content"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_right_arrow"
-        android:layout_marginStart="365dp"
-        android:layout_marginTop="685dp"/>
-
-
-
-
+        android:id="@+id/ivNext"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:background="@drawable/phone_next_white" />
 
 
 </RelativeLayout>
