--- a/app/src/main/res/layout/activity_email_screen.xml
+++ b/app/src/main/res/layout/activity_email_screen.xml
@@ -8,27 +8,39 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/dot_bg"
-        android:layout_marginTop="90dp"
-        android:layout_marginStart="10dp"/>
+        android:layout_alignTop="@+id/ivCircle"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/dot_bg" />
+
     <ImageView
+        android:id="@+id/ivCircle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/circle1_bg"
-        android:layout_marginTop="65dp"
-        android:layout_marginStart="30dp"/>
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="55dp" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_envelope"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="80dp"/>
+        android:layout_alignStart="@+id/ivCircle"
+        android:layout_alignTop="@+id/ivCircle"
+        android:layout_alignEnd="@+id/ivCircle"
+        android:layout_alignBottom="@+id/ivCircle"
+        android:padding="10dp"
+        android:src="@drawable/ic_envelope" />
+
     <ImageView
+        android:id="@+id/dot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/circle_grey"
-        android:layout_marginTop="90dp"
-        android:layout_marginStart="120dp"/>
+        android:layout_alignTop="@+id/ivCircle"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="18dp"
+        android:layout_toEndOf="@+id/ivCircle"
+        android:background="@drawable/circle_grey" />
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -36,25 +48,31 @@
         android:text="What's your"
         android:textSize="30sp"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/tiempos_headline_bold"
         android:layout_marginTop="150dp"
         android:layout_marginStart="30dp"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="email?"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:layout_marginStart="30dp"
         android:textColor="#000000"
         android:layout_below="@id/textView"
-        android:layout_marginStart="30dp"/>
-    <View
+        android:fontFamily="@font/tiempos_headline_bold" />
+
+    <EditText
+        android:id="@+id/etEmail"
         android:layout_width="350dp"
-        android:layout_height="3dp"
-        android:background="#000000"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:backgroundTint="#000000"
+        android:fontFamily="@font/modern_era_regular"
+        android:hint="Enter email"
         android:layout_marginTop="310dp"
-        android:layout_marginStart="30dp"/>
+        android:textSize="35dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -62,28 +80,32 @@
         android:src="@drawable/circle_lineout"
         android:layout_marginTop="650dp"
         android:layout_marginStart="25dp"/>
+
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/radomtext"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:text="if yoy do not wish to receive marketing communications about our products and services, check this box"
         android:textSize="20sp"
         android:textStyle="normal"
+        android:layout_marginStart="70dp"
         android:textColor="#A0A0A0"
         android:layout_marginTop="620dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginStart="70dp"/>
+
+        android:fontFamily="@font/modern_era_regular" />
+
+
     <ImageView
-        android:layout_width="wrap_content"
-        android:id="@+id/tvcircle"
-        android:layout_marginTop="670dp"
-        android:layout_marginStart="350dp"
-        android:background="@drawable/circle"
-        android:layout_height="wrap_content"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_right_arrow"
-        android:layout_marginStart="365dp"
-        android:layout_marginTop="685dp"/>
+        android:id="@+id/ivNext"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="15dp"
+        android:layout_toEndOf="@+id/radomtext"
+        android:background="@drawable/phone_next_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </RelativeLayout>
