--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -256,4 +256,31 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="settings_item">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/modern_era_regular</item>
+        <item name="android:gravity">start</item>
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:paddingBottom">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+
+    =""
+    android:=""
+    android:=""
+    android:=""
+    android:=""
+    android:=""
+    android:=""
+    android:=""
+    android:=""
+    android:=""
+    android:=""
+
 </resources>
