"Delete_Acconut_Screen"

--- a/app/src/main/res/layout/activity_learn_more_.xml
+++ b/app/src/main/res/layout/activity_learn_more_.xml
@@ -15,7 +15,7 @@
         android:id="@+id/textView34"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Recurring billing, cancel anytime."
+        android:text="@string/recurring_billing_cancel_anytime"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -31,7 +31,7 @@
         android:id="@+id/textView35"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:text="By tapping Continue, your payment will be charged to your Google play account, and yours subscription will automatically renew for the same package length at the same price until you cancel in settings in the Play Store. By tapping Continue, you agree to our "
+        android:text="@string/by_tapping_continue_your_payment_will_be_charged_to_your_google_play_account_and_yours_subscription_will_automatically_renew_for_the_same_package_length_at_the_same_price_until_you_cancel_in_settings_in_the_play_store_by_tapping_continue_you_agree_to_our"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView19"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:text="Terms"
         android:textAllCaps="false"
         android:textColor="@color/black"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView35"
         app:layout_constraintEnd_toEndOf="@+id/textView35"
         app:layout_constraintHorizontal_bias="0.755"
@@ -77,9 +77,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:text="Restore subscription"
+        android:text="@string/restore_subscription"
         android:textColor="@color/faceBook_btn_background"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/HorizontalScrollview"
         app:layout_constraintEnd_toEndOf="parent"
@@ -253,7 +253,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
-                    android:text="Find your person sooner"
+                    android:text="@string/find_your_person_sooner"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     android:layout_marginTop="0.5dp"
