--- a/app/src/main/res/layout/activity_ethnicity.xml
+++ b/app/src/main/res/layout/activity_ethnicity.xml
@@ -29,6 +29,15 @@
         android:layout_alignBottom="@+id/ivCircle"
         android:padding="10dp"
         android:src="@drawable/ic_globe" />
+    <ImageView
+        android:id="@+id/dot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/ivCircle"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@+id/ivCircle"
+        android:background="@drawable/circle_grey" />
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -198,6 +207,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvother"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:fontFamily="@font/modern_era_regular"
         android:text="Visible on profile"
         android:layout_marginTop="35dp"
