--- a/app/src/main/res/layout/activity_learn_more_.xml
+++ b/app/src/main/res/layout/activity_learn_more_.xml
@@ -267,8 +267,9 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:padding="10dp"
         android:background="@drawable/ic_close"
         app:layout_constraintBottom_toTopOf="@+id/HorizontalScrollview"
         app:layout_constraintEnd_toEndOf="parent"
