--- a/app/src/main/res/layout/activity_ethnicity.xml
+++ b/app/src/main/res/layout/activity_ethnicity.xml
@@ -146,7 +146,7 @@
         android:layout_marginStart="200dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="70dp"
-        android:text="African Descent"
+        android:text="Hispanic"
         android:textStyle="bold"
         android:textAlignment="center"/>
     <TextView
@@ -212,14 +212,17 @@
         android:text="Visible on profile"
         android:layout_marginTop="35dp"
         android:layout_marginStart="50dp"/>
-    <ImageView
+
+   <!-- <ImageView
         android:id="@+id/ivNext"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
-        android:background="@drawable/phone_next_white" />
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/phone_next_white" />-->
 
 
 </RelativeLayout>
